// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cheetor constructor > accepts a string-form github repository 1`] = `"git+https://github.com/a/b"`;

exports[`Cheetor constructor > does not set version when not provided 1`] = `undefined`;

exports[`Cheetor constructor > extracts metadata from pkg object 1`] = `"https://www.npmjs.com/package/cheetor"`;

exports[`Cheetor constructor > extracts metadata from pkg object 2`] = `"git+https://github.com/Airkro/cheetor"`;

exports[`Cheetor constructor > ignores non-github repository and defaults name 1`] = `""`;

exports[`Cheetor constructor > ignores non-github repository and defaults name 2`] = `"https://example.com"`;

exports[`Cheetor constructor > ignores non-github repository and defaults name 3`] = `"cheetor"`;

exports[`Cheetor constructor > sets version when provided 1`] = `"1.2.3"`;

exports[`Cheetor constructor > uses pkg name when bin is a string 1`] = `"mypkg"`;

exports[`Cheetor constructor > uses pkg name when bin object has many keys 1`] = `"mypkg"`;

exports[`Cheetor constructor > uses single bin key when bin is a single-key object 1`] = `"one"`;

exports[`Cheetor methods > command does nothing for invalid args 1`] = `0`;

exports[`Cheetor methods > command handles missing description 1`] = `""`;

exports[`Cheetor methods > command handles module without description 1`] = `""`;

exports[`Cheetor methods > command ignores module without command field 1`] = `0`;

exports[`Cheetor methods > command registers module options and action 1`] = `
[
  "-f, --force",
  "--level <level>",
]
`;

exports[`Cheetor methods > command registers module options and action 2`] = `"basic"`;

exports[`Cheetor methods > command registers module options and action 3`] = `"function"`;

exports[`Cheetor methods > command registers nested subcommands 1`] = `"Deploy things"`;

exports[`Cheetor methods > command registers nested subcommands 2`] = `"rollout"`;

exports[`Cheetor methods > command registers with module object 1`] = `"test"`;

exports[`Cheetor methods > command registers with module object 2`] = `"command test"`;

exports[`Cheetor methods > command registers with string name and description 1`] = `"static"`;

exports[`Cheetor methods > command registers with string name and description 2`] = `"description"`;

exports[`Cheetor methods > commandFrom handles module without description 1`] = `""`;

exports[`Cheetor methods > commandFrom imports a module and registers a command 1`] = `"test"`;

exports[`Cheetor methods > commandFrom imports a module and registers a command 2`] = `"command test"`;

exports[`Cheetor methods > commandFrom imports a module and registers a command 3`] = `
[
  "-f, --force",
  "--level <level>",
]
`;

exports[`Cheetor methods > commandFrom imports a module and registers a command 4`] = `"function"`;

exports[`Cheetor methods > commandSafe handles module without description 1`] = `""`;

exports[`Cheetor methods > commandSafe keeps cli when module has no command 1`] = `0`;

exports[`Cheetor methods > commandSafe keeps cli when module is missing 1`] = `0`;

exports[`Cheetor methods > commandSafe registers module command when present 1`] = `"test"`;

exports[`Cheetor methods > commandSmart handles module without description 1`] = `""`;

exports[`Cheetor methods > commandSmart ignores module without command field 1`] = `0`;

exports[`Cheetor methods > commandSmart keeps cli when func returns nothing 1`] = `0`;

exports[`Cheetor methods > commandSmart registers command when module has one 1`] = `"command smart"`;

exports[`Cheetor methods > commandSmart registers module options and action 1`] = `
[
  "-f, --force",
]
`;

exports[`Cheetor methods > commandSmart registers module options and action 2`] = `"function"`;

exports[`Cheetor methods > config calls the function with the cli 1`] = `"test"`;

exports[`Cheetor methods > config calls the function with the cli 2`] = `
[
  "node",
  "cheetor",
  "serve",
  "--fast",
]
`;

exports[`Cheetor methods > each command declares only its own options (Commander-native) 1`] = `
[
  "-e, --env <env>",
]
`;

exports[`Cheetor methods > each command declares only its own options (Commander-native) 2`] = `
[
  "-f, --fast",
]
`;

exports[`Cheetor methods > same-named option is declared independently at each level 1`] = `"from-a"`;

exports[`Cheetor methods > same-named option is declared independently at each level 2`] = `"From B"`;

exports[`Cheetor methods > same-named option is declared independently at each level 3`] = `"from-b"`;

exports[`Cheetor methods > setup resolves a parsed snapshot 1`] = `
{
  "args": [],
  "name": "test",
  "options": {},
}
`;

exports[`Cheetor methods > website stores site 1`] = `"https://site.com"`;

exports[`help rendering > adds a version header to the program 1`] = `
[
  {
    "position": "beforeAll",
    "text": "test/1.2.3
",
  },
]
`;

exports[`help rendering > adds website and repository footer to program and commands 1`] = `
[
  {
    "position": "after",
    "text": "
Website: https://site.com

Repository: https://github.com/a/b",
  },
]
`;

exports[`help rendering > adds website and repository footer to program and commands 2`] = `
[
  {
    "position": "after",
    "text": "
Website: https://site.com

Repository: https://github.com/a/b",
  },
]
`;

exports[`help rendering > applies the help option label to every command 1`] = `
{
  "description": "Display this message",
  "flags": "-h, --help",
}
`;

exports[`help rendering > applies the help option label to every command 2`] = `
{
  "description": "Display this message",
  "flags": "-h, --help",
}
`;

exports[`help rendering > omits the version header when no version 1`] = `false`;

exports[`help rendering > omits website when site equals repository 1`] = `
[
  {
    "position": "after",
    "text": "
Website: https://github.com/a/b

Repository: https://github.com/a/b",
  },
]
`;

exports[`help rendering > omits website when site is empty 1`] = `0`;

exports[`integration via node child process > async action is awaited before setup resolves 1`] = `
[
  "inside action",
  "after setup",
]
`;

exports[`integration via node child process > base 1`] = `
[
  "",
]
`;

exports[`integration via node child process > command action with force option 1`] = `
[
  "force=true level=basic",
]
`;

exports[`integration via node child process > command action with level option 1`] = `
[
  "force=undefined level=advanced",
]
`;

exports[`integration via node child process > command action without options 1`] = `
[
  "force=undefined level=basic",
]
`;

exports[`integration via node child process > command help with options 1`] = `
[
  "cheetor/0.15.0",
  "",
  "Usage: cheetor test [options]",
  "",
  "command test",
  "",
  "Options:",
  "  -f, --force      Force mode",
  "  --level <level>  Level (default: "basic")",
  "  -h, --help       Display this message",
  "",
  "Website: https://www.npmjs.com/package/cheetor",
  "",
  "Repository: https://github.com/Airkro/cheetor",
]
`;

exports[`integration via node child process > deep 1`] = `
[
  "",
]
`;

exports[`integration via node child process > explicit flags override ancestor defaults at the leaf 1`] = `
[
  "name=x mode=m shared=zzz",
]
`;

exports[`integration via node child process > fail 1`] = `
[
  "789",
  "456",
  "456",
]
`;

exports[`integration via node child process > help 1`] = `
[
  "cheetor/0.15.0",
  "",
  "Usage: cheetor [options]",
  "",
  "Options:",
  "  -v, --version  Display version number",
  "  -h, --help     Display this message",
  "",
  "Website: https://www.npmjs.com/package/cheetor",
  "",
  "Repository: https://github.com/Airkro/cheetor",
]
`;

exports[`integration via node child process > mid-level help lists its own options and subcommand 1`] = `
[
  "cheetor/0.15.0",
  "",
  "Usage: cheetor a b [options] [command]",
  "",
  "Level B",
  "",
  "Options:",
  "  -s, --shared <value>  Shared at B (default: "from-b")",
  "  -h, --help            Display this message",
  "",
  "Commands:",
  "  c <name>              Level C",
  "",
  "Website: https://www.npmjs.com/package/cheetor",
  "",
  "Repository: https://github.com/Airkro/cheetor",
]
`;

exports[`integration via node child process > mid-level help lists its subcommands 1`] = `
[
  "cheetor/0.15.0",
  "",
  "Usage: cheetor a [options] [command]",
  "",
  "Level A",
  "",
  "Options:",
  "  -m, --mode <mode>     Mode (default: "parent")",
  "  -s, --shared <value>  Shared at A (default: "from-a")",
  "  -h, --help            Display this message",
  "",
  "Commands:",
  "  b [options]           Level B",
  "",
  "Website: https://www.npmjs.com/package/cheetor",
  "",
  "Repository: https://github.com/Airkro/cheetor",
]
`;

exports[`integration via node child process > nested subcommand with inherited options 1`] = `
[
  "env=prod name=api fast=true",
]
`;

exports[`integration via node child process > okay 1`] = `
[
  "cheetor/0.15.0",
  "",
  "Usage: cheetor [options] [command]",
  "",
  "Options:",
  "  -v, --version   Display version number",
  "  -h, --help      Display this message",
  "",
  "Commands:",
  "  static          command static",
  "  test [options]  command test",
  "  smart           command smart",
  "  help [command]  display help for command",
  "",
  "Website: https://www.npmjs.com/package/cheetor",
  "",
  "Repository: https://github.com/Airkro/cheetor",
]
`;

exports[`integration via node child process > parent without leaf lists subcommands on stderr 1`] = `
[
  "Available subcommands: rollout",
]
`;

exports[`integration via node child process > parsed reports the matched subcommand name and its args 1`] = `
[
  "{"name":"greet","args":["World"],"options":{"loud":true}}",
]
`;

exports[`integration via node child process > parsed resolves the canonical leaf when invoked via an alias 1`] = `
[
  "{"name":"rollout","args":["api"],"options":{"fast":true,"env":"prod"}}",
]
`;

exports[`integration via node child process > subcommand alias routes to canonical child 1`] = `
[
  "env=prod name=api fast=true",
]
`;

exports[`integration via node child process > subcommand help lists nested command 1`] = `
[
  "cheetor/0.15.0",
  "",
  "Usage: cheetor deploy [options] [command]",
  "",
  "Deploy things",
  "",
  "Options:",
  "  -e, --env <env>              Target environment",
  "  -h, --help                   Display this message",
  "",
  "Commands:",
  "  rollout|go [options] <name>  Rollout a service",
  "",
  "Website: https://www.npmjs.com/package/cheetor",
  "",
  "Repository: https://github.com/Airkro/cheetor",
]
`;

exports[`integration via node child process > three-level subcommand reads merged ancestor options 1`] = `
[
  "name=x mode=parent shared=from-a",
]
`;

exports[`lib > importFrom with bare path 1`] = `"function"`;

exports[`lib > importFrom with relative path 1`] = `"test"`;

exports[`lib > importFromSafe returns false on missing module 1`] = `false`;

exports[`lib > importFromSafe success 1`] = `
{
  "action": [Function],
  "command": "test",
  "describe": "command test",
  "options": [
    [
      "-f, --force",
      "Force mode",
    ],
    [
      "--level <level>",
      "Level",
      {
        "default": "basic",
      },
    ],
  ],
}
`;
